# secretnote

./: .dockerignore  .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.node.cjs  .gitignore  .lintstagedrc.js  .npmrc  .nxignore  .prettierignore  .python-version  .remarkrc.mjs  .stylelintrc.js  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  main.hs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poetry.toml  program.r  pyproject.toml  tsconfig.base.json  tsconfig.node.json  vitest.config.mts
.changeset/: blue-crabs-argue.md  config.json  (+2 more)
pyprojects/lite-server/: README.md  pyproject.toml
pyprojects/lite-server/src/server/: __init__.py
pyprojects/lite-server/src/server/services/: nodes_handlers.py  nodes_manager.py
pyprojects/secretnote/: .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  __init__.py  __main__.py  package.json  pyproject-poetry.toml  pyproject.toml  ruff.toml  tsconfig.json
pyprojects/secretnote/.jupyter/: config_dev.py
pyprojects/secretnote/dev-config/: jupyter_server_config.py
pyprojects/secretnote/docs/dev-notes/: instrumentation.md
pyprojects/secretnote/jupyter-config/jupyter_server_config.d/: libro-server.json
pyprojects/secretnote/libro_server/: __init__.py  app.py  handler.py
pyprojects/secretnote/libro_server/node/: handler.py  nodemanager.py
pyprojects/secretnote/libro_server/template/: page.html  secretnote.html
pyprojects/secretnote/proto/: buf.gen.yaml  buf.yaml
pyprojects/secretnote/scql/server/: path.py
pyprojects/secretnote/scql/server/services/: broker_manager.py
pyprojects/secretnote/scripts/: copy_static_files.py
pyprojects/secretnote/secretnote/: __main__.py
pyprojects/secretnote/secretnote/scql/.jupyter/: config_dev.py
pyprojects/secretnote/secretnote/scql/server/: __main__.py  app.py  utils.py
pyprojects/secretnote/secretnote/scql/server/services/: agent_handlers.py  broker_handlers.py  broker_manager.py  contents_handlers.py  nodes_handlers.py  nodes_manager.py  pages_handlers.py
pyprojects/secretnote/secretnote/sf/.jupyter/: config_dev.py
pyprojects/secretnote/secretnote/sf/server/: __main__.py  app.py  utils.py
pyprojects/secretnote/secretnote/sf/server/services/: _proxy_handler.py  contents_handlers.py  misc_handlers.py  nodes_handlers.py  nodes_manager.py  pages_handlers.py
pyprojects/secretnote/sf/.jupyter/: config_dev.py
pyprojects/secretnote/sf/server/: app.py  nodes_manager.py  pages_handlers.py  utils.py
pyprojects/secretnote/sf/server/services/: nodes_manager.py  pages_handlers.py
pyprojects/secretnote/src/secretnote/: _resources.py  _version.py
pyprojects/secretnote/src/secretnote/compat/ray/: __init__.py
pyprojects/secretnote/src/secretnote/compat/secretflow/device/: driver.py
pyprojects/secretnote/src/secretnote/compat/spu/: __init__.py
pyprojects/secretnote/src/secretnote/display/: __init__.py  api.py  app.py  digest.py  graph.py  models.py  timeline.py
pyprojects/secretnote/src/secretnote/display/core/: renderer.py
pyprojects/secretnote/src/secretnote/display/core/templates/: component.html
pyprojects/secretnote/src/secretnote/display/parsers/: base.py  dependencies.py  expression.py  graph.py  timeline.py
pyprojects/secretnote/src/secretnote/display/react/: component.py
pyprojects/secretnote/src/secretnote/display/react/templates/: component.html
pyprojects/secretnote/src/secretnote/docpack/: __main__.py  display.py
pyprojects/secretnote/src/secretnote/docpack/hazmat/: compat.py  io.py  markers.py  primitives.py  schema.py
pyprojects/secretnote/src/secretnote/docpack/recipes/preprocessing/: impute.py  map_cases.py  psi.py  train_test_split.py
pyprojects/secretnote/src/secretnote/docpack/recipes/stats/: pearsonr.py
pyprojects/secretnote/src/secretnote/formal/: symbols.py
pyprojects/secretnote/src/secretnote/formal/locations/: __init__.py  pyu.py  utils.py  world.py
pyprojects/secretnote/src/secretnote/functional/: __init__.py
pyprojects/secretnote/src/secretnote/instrumentation/: __init__.py  checkpoint.py  envvars.py  exporters.py  ipython.py  models.py  pprint.py  profiler.py  rules.py  sdk.py  snapshot.py  tree_util.py  types.py  utils.py
pyprojects/secretnote/src/secretnote/instrumentation/display/: app.py  models.py
pyprojects/secretnote/src/secretnote/instrumentation/display/parsers/: base.py  dependencies.py  expression.py
pyprojects/secretnote/src/secretnote/instrumentation/visualize/: static
pyprojects/secretnote/src/secretnote/proto/: __init__.py
pyprojects/secretnote/src/secretnote/proto/opentelemetry/: __init__.py
pyprojects/secretnote/src/secretnote/server/: __init__.py  __main__.py  app.py  db.py  handlers.py
pyprojects/secretnote/src/secretnote/server/node/: handler.py  nodemanager.py
pyprojects/secretnote/src/secretnote/server/services/agent/: handlers.py
pyprojects/secretnote/src/secretnote/server/services/broker/: handlers.py  manager.py
pyprojects/secretnote/src/secretnote/server/services/nodes/: handlers.py  nodemanager.py
pyprojects/secretnote/src/secretnote/server/services/pages/: handlers.py
pyprojects/secretnote/src/secretnote/typing/: tree_util.py
pyprojects/secretnote/src/secretnote/utils/: itertools.py  logging.py  node.py  opentelemetry.py  path.py  pprint.py  pydantic.py  version.py  warnings.py
pyprojects/secretnote/src/secretnote/utils/node/: __init__.py  resolve.mjs
pyprojects/secretnote/src/secretnote/visualization/: interpreter.py  renderer.py  static
pyprojects/secretnote/src/secretnote/visualization/templates/: component.html
pyprojects/secretnote/tests/secretnote/compat/secretflow/device/: test_driver.py
pyprojects/secretnote/tests/secretnote/docpack/hazmat/: test_compat.py
pyprojects/secretnote/tests/secretnote/utils/: test_version.py
pyprojects/secretnote/tests/secretnote/utils/node/: .gitignore  package.json  test_resolve.py
pyprojects/secretnote/tests/secretnote/utils/node/distributed/: .gitignore
pyprojects/spu-stubs/: CHANGELOG.md  README.md  package.json  pyproject.toml
pyprojects/spu-stubs/src/libspu/: spu_pb2.pyi
(+204 files in other folders)
