[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
dependencies = [
  "pydantic>=1.10, <2",
  "packaging>=23.1",
]
description = "Notebook suite for SecretFlow"
dynamic = ["version"]
name = "secretnote"
readme = "README.md"
requires-python = ">=3.8, <3.9"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "black>=23.7.0",
  "hatch>=1.7.0",
  "ipython>=8.12.2",
  "jupyterlab>=4.0.5",
  "pytest>=7.4.0",
  "ruff>=0.0.284",
  "secretflow-lite==1.1.0b0",
]
managed = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pyproject/package.json"
# regex to match "version" in package.json
pattern = '"version": "(?P<version>[^"]+)"'

[tool.hatch.build]
artifacts = []
directory = "pyproject/dist"
only-include = ["pyproject/src", "pyproject/package.json"]

[tool.hatch.build.targets.wheel]
sources = ["pyproject/src"]

[tool.pytest.ini_options]
pythonpath = ["pyproject/src"]

[tool.black]
extend-exclude = """
_pb2\\.pyi?
| _pb2_grpc\\.pyi?
"""
line-length = 88
target-versions = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyproject/src", "pyproject/tests"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["pyproject/src"]
reportGeneralTypeIssues = "information"
reportOptionalMemberAccess = "information"
