[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = []
name = "monorepo"
readme = "README.md"
requires-python = ">=3.8, <3.9"
version = "0.0.0"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye.workspace]
members = ["pyprojects/*"]

[tool.rye]
dev-dependencies = [
  "black>=23.7.0",
  "hatch>=1.7.0",
  "ipython>=8.12.2",
  "jupyterlab>=4.0.5",
  "logging_tree>=1.9",
  "mypy>=1.5.1",
  "nbclient>=0.8.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "pip>=23.2.1",
  "pytest>=7.4.0",
  "ray[default]~=2.6.3",
  "ruff>=0.0.284",
  "secretflow-lite==1.1.0b0",
  "setuptools>=68.2.2",
  "portpicker>=1.6.0",
  "netifaces>=0.11.0",
  "torch>=2.1.0",
  "datamodel-code-generator>=0.22.1",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
force-exclude = """
_pb2\\.pyi?
| _pb2_grpc\\.pyi?
| secretnote/proto
"""
line-length = 88
target-versions = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyprojects/*/src"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["pyprojects/*/src"]
reportGeneralTypeIssues = "information"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
