[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = []
name = "monorepo"
readme = "README.md"
requires-python = ">=3.8, <3.12"
version = "0.0.0"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye.workspace]
members = ["pyprojects/*"]

[tool.rye]
dev-dependencies = [
  "black[jupyter]>=23.7.0",
  "datamodel-code-generator>=0.22.1",
  "fastapi<0.100",
  "hatch>=1.7.0",
  "ipython>=8.12.2",
  "jupyter-lsp>=2.2.0",
  "jupyterlab>=4.0.5",
  "logging_tree>=1.9",
  "matplotlib>=3.7.3",
  "mypy>=1.5.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "pandas>=1.5.3, <2.0.0",
  "pip>=23.2.1",
  "pytest>=7.4.0",
  "ruff>=0.0.284",
  "secretflow-lite==1.1.0b0",
  "setuptools>=68.2.2",
  "snakeviz>=2.2.0",
  "statsmodels>=0.14.0",
  "torch>=2.1.0",
  "torchmetrics>=1.2.0",
  "torchvision>=0.16.0",
  "transformers>=4.31.0",
  "uvicorn>=0.23.2",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
force-exclude = """
_pb2\\.pyi?
| _pb2_grpc\\.pyi?
| secretnote/proto
"""
line-length = 88
target-versions = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyprojects/*/src"]

[tool.ruff.extend-per-file-ignores]
"*.ipynb" = ["E402", "I001"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["pyprojects/*/src"]
reportGeneralTypeIssues = "information"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
