[project]
authors = [
  { name = "wenyu.jqq", email = "wenyu.jqq@antgroup.com" },
  { name = "Tony Wu", email = "tonywu6@protonmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "astunparse>=1.6.3",
  "importlib-resources>=5.12",
  "ipykernel>=6.24.0",
  "ipywidgets>=8.1.1",
  "jupyter-resource-usage~=1.0",
  "jupyter-server~=2.7",
  "jupyter-lsp>=2.2.0",
  "jupyter-server-proxy",
  "loguru>=0.7.2",
  "more-itertools>=10.1.0",
  "networkx>=2.8.8",
  "packaging>=23.1",
  "rich>=13.7.0",
  "stack_data>=0.6.3",
  "tqdm>=4.66.1",
  "dataset>=1.6.2",
  "python-lsp-server==1.8.2",
  # https://github.com/python/typing_extensions/issues/369#issuecomment-2051331676
  "typing_extensions>=4.6",
]
description = "Jupyter Server for SecretNote (Python) App"
dynamic = ["version"]
license.text = "Apache-2.0"
name = "secretnote"
readme = "README.md"
requires-python = ">=3.8, <3.12"

[project.scripts]
secretnote = "secretnote.server.app:SecretNoteApp.launch"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "packaging>=23.1",
  "rich",
  "importlib-resources",
  "pydantic<2",
]

[tool.rye]
dev-dependencies = [
  "matplotlib>=3.7.3",
  "pandas>=1.5.3, <2.0.0",
  "statsmodels>=0.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
expression = "__version__"
path = "./src/secretnote/__init__.py"
search-paths = ["./src"]
source = "code"

[tool.hatch.build]
artifacts = ["src/secretnote/**/dist/**/*", "*.js", "*.cjs"] # TODO
directory = "dist"
only-include = ["src", "package.json"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
