[project]
authors = [
  { name = "wenyu.jqq", email = "wenyu.jqq@antgroup.com" },
  { name = "Tony Wu", email = "tonywu6@protonmail.com" },
  { name = "zhuoxu.zx", email = "zhuoxu.zx@antgroup.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "importlib-resources>=5.12",
  "ipykernel>=6.24.0",
  "ipywidgets>=8.1.1",
  "jupyter-resource-usage~=1.0",
  "jupyter-server~=2.7",
  "jupyter-lsp>=2.2.0",
  "jupyter-server-proxy",
  "dataset>=1.6.2",
  "python-lsp-server==1.8.2",
]
description = "Server for SecretNote (Python) App"
dynamic = ["version"]
license.text = "Apache-2.0"
name = "secretnote"
readme = "README.md"
requires-python = ">=3.8, <3.12"

[project.scripts]
secretnote = "lite-server.server.app:SecretNoteApp.launch"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "importlib-resources"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
expression = "__version__"
path = "./src/secretnote/__init__.py"
search-paths = ["./src"]
source = "code"

[tool.hatch.build]
artifacts = ["www/**/*"]
directory = "www"
only-include = ["src", "www", "package.json"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.rye]
dev-dependencies = [
  "matplotlib>=3.7.3",
  "pandas>=1.5.3, <2.0.0",
  "statsmodels>=0.14.0",
]
