[project]
authors = [
  {name = "wenyu.jqq", email = "wenyu.jqq@antgroup.com"},
  {name = "Tony Wu", email = "tonywu6@protonmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "astunparse>=1.6.3",
  "importlib-resources>=5.12",
  "ipykernel>=6.24.0",
  "ipywidgets>=8.1.1",
  "jupyter-resource-usage~=1.0",
  "jupyter-server~=2.7",
  "jupyter-lsp>=2.2.0",
  "loguru>=0.7.2",
  "more-itertools>=10.1.0",
  "networkx>=2.8.8",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "orjson>=3.9.9",
  "packaging>=23.1",
  "pydantic>=1.10, <2",
  "ray[default]~=2.6.3", # FIXME: ????????????
  "secretflow-ray==2.2.0",
  "rich>=13.7.0",
  "stack_data>=0.6.3",
  "tqdm>=4.66.1",
  "dataset>=1.6.2",
  "ruff-lsp==0.0.50",
  "python-lsp-server==1.8.2",
]
description = "Notebook suite for SecretFlow"
dynamic = ["version"]
license.text = "Apache-2.0"
name = "secretnote"
readme = "README.md"
requires-python = ">=3.8, <3.12"

[project.scripts]
secretnote = "secretnote.server.app:SecretNoteApp.launch"

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "packaging>=23.1",
  "rich",
  "importlib-resources",
  "pydantic<2",
]

[tool.rye]
dev-dependencies = [
  "matplotlib>=3.7.3",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "pandas>=1.5.3, <2.0.0",
  "secretflow-lite==1.3.0b0",
  "statsmodels>=0.14.0",
  "torch>=2.1.0",
  "torchmetrics>=1.2.0",
  "torchvision>=0.16.0",
  "transformers>=4.31.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
expression = "__version__"
path = "./src/secretnote/__init__.py"
search-paths = ["./src"]
source = "code"

[tool.hatch.build]
artifacts = ["src/secretnote/**/dist/**/*", "*.js", "*.cjs"]
directory = "dist"
only-include = ["src", "package.json"]

[tool.hatch.build.targets.sdist.hooks.custom]
path = "./scripts/prebuild.py"

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.extend-per-file-ignores]
"src/secretnote/proto/**/*" = ["E501", "I001"]
