[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []
description = "Type stubs for SPU"
dynamic = ["version"]
name = "spu-stubs"
readme = "README.md"
requires-python = ">=3.8, <3.9"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
# regex to match "version" in package.json
pattern = '"version": "(?P<version>[^"]+)"'

[tool.hatch.build]
artifacts = ["*.pyi", "py.typed"]
dev-mode-dirs = ["src"] # make stubs discoverable thru editable install
directory = "dist"
only-include = ["src", "package.json"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
